packages/Sympathy/Sympathy-1.6.2-py3-none-any.whl/sympathy_app/Sympathy/Test/Unit/Workflows/errors/subflow_table_input.syx
<?xml version='1.0' encoding='ASCII'?>
<flow xmlns="http://www.sysess.org/sympathyfordata/workflow/1.0" cls="Flow" height="50.0" id="" is_locked="False" uuid="{8735884c-b428-4963-b0e9-b2f690072b50}" width="50.0" x="1825.0" y="2025.0">
  <label>New Subflow 0</label>
  <description></description>
  <author>Unknown</author>
  <copyright></copyright>
  <version>1.0</version>
  <source>subflow_table_input.syx</source>
  <aggregation type="json"><![CDATA[null]]></aggregation>
  <libraries type="json"><![CDATA[[]]]></libraries>
  <pythonpaths type="json"><![CDATA[[]]]></pythonpaths>
  <environment type="json"><![CDATA[{}]]></environment>
  <parameters type="json"><![CDATA[{"environment": {}}]]></parameters>
  <ports>
    <input height="50.0" index="0" key="Port" optional="False" scheme="hdf5" type="adaf" uuid="{f4d3c876-e5b8-4040-a9ea-05f2a5ad5253}" width="50.0" x="1725.0" y="2025.0">
      <label>Port</label>
      <description>Port</description>
    </input>
  </ports>
  <node height="50.0" id="org.sysess.sympathy.data.table.converttablescolumns" uuid="{62f402f8-7bae-4958-86b1-8d6c57cce25a}" width="50.0" x="1850.0" y="2025.0">
    <label>Convert columns in Tables</label>
    <description>Convert selected columns in Tables to new data types.</description>
    <author>Erik der Hagopian &lt;erik.hagopian@combine.se&gt;</author>
    <copyright>(c) 2013 Combine Control Systems AB</copyright>
    <version>1.0</version>
    <parameters type="json"><![CDATA[{"type": "group", "in_column_list": {"description": "Select the columns to use", "label": "Select columns", "order": 0, "passthrough": false, "type": "list", "list": [], "value": [], "value_names": [], "editor": {"buttons": true, "invertbutton": true, "selection": "multi", "type": "listview"}}, "in_type_list": {"description": "Select the type to use", "label": "Select type", "order": 1, "passthrough": false, "type": "list", "list": [], "value": [], "value_names": [], "editor": {"selection": "single", "type": "listview"}}, "out_column_list": {"description": "Selected columns to convert", "label": "Convert columns", "order": 2, "passthrough": false, "type": "list", "list": [], "value": [], "value_names": [], "editor": {"selection": "multi", "type": "listview"}}, "out_type_list": {"description": "Selected types to use", "label": "Convert types", "order": 3, "passthrough": false, "type": "list", "list": [], "value": [], "value_names": [], "editor": {"selection": "multi", "type": "listview"}}}]]></parameters>
    <ports>
      <input key="port1" scheme="hdf5" type="[table]" uuid="{f99a1f2c-9d30-4441-a383-71700f946c08}">
        <label>Input Table</label>
        <description>Input Table</description>
      </input>
      <output key="port2" scheme="hdf5" type="[table]" uuid="{c58167eb-a2a2-42c3-a9a8-4be1821984e0}">
        <label>Tables with converted columns</label>
        <description>Tables with converted columns</description>
      </output>
    </ports>
  </node>
</flow>
